Fixed the overlapping of the texts on the info page

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -590,6 +590,11 @@ pre tt:before,
 pre tt:after {
   content: "";
 }
+
+.main-content{
+  min-height: 100vh;
+}
+
 @media only screen and (max-width: 480px) {
   html {
     font-size: 100%;
